--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -148,7 +148,7 @@
                   Administration Forecasts},
   journal =      { },
   year =         2015,
-  note =         {UNF:5:1oerGFXQ0Bu9bcMFU5/t2A==
+  note =         {[UNF:5:1oerGFXQ0Bu9bcMFU5/t2A==]
                   \underline{http://dx.doi.org/10.7910/DVN/28122}
                   Harvard Dataverse [Distributor] V1 [Version]}
 }
@@ -160,7 +160,7 @@
                   Administration Forecasts},
   journal =      { },
   year =         2015,
-  note =         {UNF:6:967llFHgiywsHWWp1cVg9A==
+  note =         {[UNF:6:967llFHgiywsHWWp1cVg9A==]
                   \underline{http://dx.doi.org/10.7910/DVN/28323}
                   Harvard Dataverse [Distributor] V1 [Version] }
 }
@@ -1946,7 +1946,7 @@ pages={1037--1060},
                   Measurement Error And Missing Data: Overview},
   journal =      { },
   year =         2015,
-  note =         {UNF:5:n/rveBXUX+nOxE6Z5xsWNg==
+  note =         {[UNF:5:n/rveBXUX+nOxE6Z5xsWNg==]
                   \underline{http://dx.doi.org/10.7910/DVN/29606} IQSS
                   Dataverse Network [Distributor]}
 }
@@ -1970,7 +1970,7 @@ pages={1037--1060},
                   What to Do About It},
   journal =      { },
   year =         2014,
-  note =         {UNF:5:Bc1yVsbYLpjnS0Bx6FDnNA==
+  note =         {[UNF:5:Bc1yVsbYLpjnS0Bx6FDnNA==]
                   \underline{http://dx.doi.org/10.7910/DVN/26935} IQSS
                   Dataverse Network [Distributor]}
 }
@@ -1991,7 +1991,7 @@ pages={1037--1060},
                   Nonparametric Content Analysis for Social Science},
   journal =	 { },
   year =	 2009,
-  note =	 {\underline{UNF:3:xlE5stLgKvpeMvxzlLxzEQ==}
+  note =	 {\underline{[UNF:3:xlE5stLgKvpeMvxzlLxzEQ==]}
                   hdl:1902.1/12898 Murray Research Archive [Distributor]}
 }
 
@@ -2061,11 +2061,10 @@ pages={1037--1060},
   author =	 {Federico Girosi and Gary King},
   title =	 {Cause of Death Data},
   year =	 {2006},
-  note =	 {\underline{hdl:1902.1/UOVMCPSWOL}
+  note =	 {{\underline{hdl:1902.1/UOVMCPSWOL}
                   [UNF:3:9JU+SmVyHgwRhAKclQ85Cg==] Murray Research
-                  Archive [Distributor]}
+                  Archive [Distributor]}}
 }
-
 
 @article{HoImaKin06,
   author =	 {Daniel E. Ho and Kosuke Imai and Gary King and
@@ -2085,7 +2084,7 @@ pages={1037--1060},
                   Dissolution in Parliamentary Democracies},
   year =	 {2006},
   note =	 {{\underline{hdl:1902.1/RMPXNUSBBS}
-                  [UNF:3:lfKIeFJKgejkOzXEY1i6lw== Murray Research
+                  [UNF:3:lfKIeFJKgejkOzXEY1i6lw==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2103,9 +2102,9 @@ pages={1037--1060},
   title =	 {Replication data for: Detecting Model Depedence in
                   Statistical Inference: A Response},
   year =	 {2006},
-  note =	 {\underline{hdl:1902.1/FGSRBXXIYT}
+  note =	 {{\underline{hdl:1902.1/FGSRBXXIYT}
                   [UNF:3:K4/CgnMYDMV6izc5RVOZTA==] Murray Research
-                  Archive [Distributor]}
+                  Archive [Distributor]}}
 }
 
 @article{KinZen06d,
@@ -2113,9 +2112,9 @@ pages={1037--1060},
   title =	 {Replication data for: When Can History be Our Guide?
                   The Pitfalls of Counterfactual Inference},
   year =	 {2006},
-  note =	 {\underline{hdl:1902.1/DXRXCFAWPK}
+  note =	 {{\underline{hdl:1902.1/DXRXCFAWPK}
                   [UNF:3:DaYlT6QSX9r0D50ye+tXpA==] Murray Research
-                  Archive [Distributor]}
+                  Archive [Distributor]}}
 }
 
 @article{KinZen06e,
@@ -2123,9 +2122,9 @@ pages={1037--1060},
   title =	 {Replication data for: The Dangers of Extreme
                   Counterfactuals },
   year =	 {2006},
-  note =	 {\underline{hdl:1902.1/UTVMBVNGMX}
+  note =	 {{\underline{hdl:1902.1/UTVMBVNGMX}
                   [UNF:3:ytKKNjK+yR8Pq3H0RcV6eg==] Murray Research
-                  Archive [Distributor]}
+                  Archive [Distributor]}}
 }
 
 @article{EpsHoKin05b,
@@ -2135,7 +2134,7 @@ pages={1037--1060},
                   Crisis: How War Affects Only Nonwar Cases},
   year =	 {2005},
   note =	 {{\underline{hdl:1902.1/RESUDVYWPE}
-                  UNF:3:ZmbzFbfqogNM0Gb6CcV52A== Murray Research
+                  [UNF:3:ZmbzFbfqogNM0Gb6CcV52A==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2144,7 +2143,7 @@ pages={1037--1060},
   title =	 {Replication data for: Gelpi and Grynaviski},
   year =	 {2004},
   note =	 {{\underline{hdl:1902.1/LAAYCJJGDS}
-                  UNF:3:N0bEAswAlPPVXCxPOZYyqw== Murray Research
+                  [UNF:3:N0bEAswAlPPVXCxPOZYyqw==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2153,7 +2152,7 @@ pages={1037--1060},
   title =	 {10 Million International Dyadic Events},
   year =	 {2003},
   note =	 {{\underline{hdl:1902.1/FYXLAWZRIA}
-                  UNF:3:um06qkr/1tAwpS4roUqAiw== Murray Research
+                  [UNF:3:um06qkr/1tAwpS4roUqAiw==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2163,7 +2162,7 @@ pages={1037--1060},
                   International Relations},
   year =	 {2001},
   note =	 {\underline{hdl:1902.1/OUCBSJKXIC}
-                  UNF:3:vyct3c8fMCdWOdp03NUhaA== Murray Research
+                  [UNF:3:vyct3c8fMCdWOdp03NUhaA==] Murray Research
                   Archive [Distributor]}
 }
 
@@ -2173,7 +2172,7 @@ pages={1037--1060},
                   Failure},
   year =	 {2001},
   note =	 {{\underline{hdl:1902.1/RPQIODIANR}
-                  UNF:3:CEsbEgPxbxExfYuh2NWwWQ== Murray Research
+                  [UNF:3:CEsbEgPxbxExfYuh2NWwWQ==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2183,7 +2182,7 @@ pages={1037--1060},
                   of International Conflict: A Conjecture},
   volume =	 {2000},
   note =	 {{\underline{hdl:1902.1/SZKONDGOMF}
-                  UNF:3:rYRDzT8dCJ/BR7V9u8fObA== Murray Research
+                  [UNF:3:rYRDzT8dCJ/BR7V9u8fObA==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2193,7 +2192,7 @@ pages={1037--1060},
                   Analyses: Improving Interpretation and Presentation},
   year =	 {2000},
   note =	 {{\underline{hdl:1902.1/QTCABXZZRQ}
-                  UNF:3:1VaLflZ/LfB+AISX+hBm1w== Murray Research
+                  [UNF:3:1VaLflZ/LfB+AISX+hBm1w==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2203,7 +2202,7 @@ pages={1037--1060},
                   Multiparty Electoral Data},
   year =	 {1999},
   note =	 {{\underline{hdl:1902.1/QIGTWZYTLZ}
-                  UNF:3:gwGcKylle0BKJTGv3Zv4OA== Murray Research
+                  [UNF:3:gwGcKylle0BKJTGv3Zv4OA==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2214,7 +2213,7 @@ pages={1037--1060},
                   Decisive},
   year =	 {1998},
   note =	 {{\underline{hdl:1902.1/NOLXXTUHNZ}
-                  UNF:3:ORDulVH6qEb4lsCyDn5W3A== Murray Research
+                  [UNF:3:ORDulVH6qEb4lsCyDn5W3A==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2225,7 +2224,7 @@ pages={1037--1060},
                   Behavior from Aggregate Data},
   year =	 {1997},
   note =	 {{\underline{hdl:1902.1/LWMMKUTYXS}
-                  UNF:3:DRWozWd89+vNLO7lY2AHbg== Murray Research
+                  [UNF:3:DRWozWd89+vNLO7lY2AHbg==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2235,7 +2234,7 @@ pages={1037--1060},
                   Legislative Redistricting},
   year =	 {1994},
   note =	 {{\underline{hdl:1902.1/BNCOWNVERH}
-                  UNF:3:ZXahi7PBFxLRb46sVKOAuQ== Murray Research
+                  [UNF:3:ZXahi7PBFxLRb46sVKOAuQ==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2247,7 +2246,7 @@ pages={1037--1060},
                   Legislature},
   year =	 {1994},
   note =	 {{\underline{hdl:1902.1/JWFTSFKOBK}
-                  UNF:3:Fi01DWj4Sx+0ZEOEo4TOXA== Murray Research
+                  [UNF:3:Fi01DWj4Sx+0ZEOEo4TOXA==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2257,7 +2256,7 @@ pages={1037--1060},
                   Representatives, 1898-1992},
   year =	 {1994},
   note =	 {{\underline{hdl:1902.1/TQDSSPRDDZ}
-                  UNF:3:tD8SznMFjKIxWxOqTQaamQ== Murray Research
+                  [UNF:3:tD8SznMFjKIxWxOqTQaamQ==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2277,7 +2276,7 @@ pages={1037--1060},
                   and Government Spending},
   year =	 {1993},
   note =	 {{\underline{hdl:1902.1/XEHYCJAWQD}
-                  UNF:3:cwNXuRQ/6Lp72obLkttmGg== Murray Research
+                  [UNF:3:cwNXuRQ/6Lp72obLkttmGg==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2287,7 +2286,7 @@ pages={1037--1060},
                   Incumbency Advantage},
   year =	 {1991},
   note =	 {{\underline{hdl:1902.1/JTMXGSZXIZ}
-                  UNF:3:IE4ZSAs8ZzUK+fRXNbVvGw== Murray Research
+                  [UNF:3:IE4ZSAs8ZzUK+fRXNbVvGw==] Murray Research
                   Archive [Distributor]}}
 }
 
