--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2462,5 +2462,5 @@ pages={1037--1060},
                   Document Set Discovery from Unstructured Text},
   journal =      { },
   year =         2016,
-  note =      {\underline{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
+  note =      {\url{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
                   [UNF:6:56ELwemliNH+ALideeeh3Q==]}}
