--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -149,7 +149,7 @@
   journal =      { },
   year =         2015,
   note =         {[UNF:5:1oerGFXQ0Bu9bcMFU5/t2A==]
-                  \underline{http://dx.doi.org/10.7910/DVN/28122}
+                  \url{http://dx.doi.org/10.7910/DVN/28122}
                   Harvard Dataverse [Distributor] V1 [Version]}
 }
 
@@ -161,7 +161,7 @@
   journal =      { },
   year =         2015,
   note =         {[UNF:6:967llFHgiywsHWWp1cVg9A==]
-                  \underline{http://dx.doi.org/10.7910/DVN/28323}
+                  \url{http://dx.doi.org/10.7910/DVN/28323}
                   Harvard Dataverse [Distributor] V1 [Version] }
 }
 
@@ -1947,7 +1947,7 @@ pages={1037--1060},
   journal =      { },
   year =         2015,
   note =         {[UNF:5:n/rveBXUX+nOxE6Z5xsWNg==]
-                  \underline{http://dx.doi.org/10.7910/DVN/29606} IQSS
+                  \url{http://dx.doi.org/10.7910/DVN/29606} IQSS
                   Dataverse Network [Distributor]}
 }
 
@@ -1958,7 +1958,7 @@ pages={1037--1060},
                   Extensions},
   journal =      { },
   year =         2015,
-  note =         {\underline{http://dx.doi.org/10.7910/DVN/29610} IQSS
+  note =         {\url{http://dx.doi.org/10.7910/DVN/29610} IQSS
                   Dataverse Network [Distributor]}
 }
 
@@ -1971,7 +1971,7 @@ pages={1037--1060},
   journal =      { },
   year =         2014,
   note =         {[UNF:5:Bc1yVsbYLpjnS0Bx6FDnNA==]
-                  \underline{http://dx.doi.org/10.7910/DVN/26935} IQSS
+                  \url{http://dx.doi.org/10.7910/DVN/26935} IQSS
                   Dataverse Network [Distributor]}
 }
 
@@ -1991,7 +1991,7 @@ pages={1037--1060},
                   Nonparametric Content Analysis for Social Science},
   journal =	 { },
   year =	 2009,
-  note =	 {\underline{[UNF:3:xlE5stLgKvpeMvxzlLxzEQ==]}
+  note =	 {\url{[UNF:3:xlE5stLgKvpeMvxzlLxzEQ==]}
                   hdl:1902.1/12898 Murray Research Archive [Distributor]}
 }
 
@@ -2008,7 +2008,7 @@ pages={1037--1060},
                   Universal Health Insurance Program},
   journal =      { },
   year =         {2009},
-  note =         {\underline{hdl:1902.1/11044}
+  note =         {\url{hdl:1902.1/11044}
                   [UNF:3:jeUN9XODtYUp2iUbe8gWZQ==] Harvard Dataverse
                   [Distributor]}
 }
@@ -2020,7 +2020,7 @@ pages={1037--1060},
                   the Mexican Universal Health Insurance Evaluation: Rejoinder},
   journal =	 { },
   year =	 {2009},
-  note =	 {\underline{hdl:1902.1/12730}
+  note =	 {\url{hdl:1902.1/12730}
                   [UNF:3:CKs4T0iVYxP36LQSMgAkuw==] Murray Research
                   Archive [Distributor]}
 }
@@ -2033,7 +2033,7 @@ pages={1037--1060},
                   Insurance Evaluation},
   journal =      { },
   year =         {2009},
-  note =         {\underline{hdl:1902.1/11047}
+  note =         {\url{hdl:1902.1/11047}
                   [UNF:3:jeUN9XODtYUp2iUbe8gWZQ==] Harvard Dataverse [Distributor]}
 }
 
@@ -2043,7 +2043,7 @@ pages={1037--1060},
                   Claims about Extreme Counterfactuals: A Response},
   journal =	 { },
   year =	 2008,
-  note =	 {\underline{hdl:1902.1/11903}, Murray Research
+  note =	 {\url{hdl:1902.1/11903}, Murray Research
                   Archive [Distributor]}
 }
 
@@ -2053,7 +2053,7 @@ pages={1037--1060},
                   Adult Mortality without Selection Bias from Sibling
                   Survival Data},
   year =	 2006,
-  note =	 {{\underline{hdl:1902.1/ZMESWNECZW}
+  note =	 {{\url{hdl:1902.1/ZMESWNECZW}
                   Murray Research Archive [Distributor]}}
 }
 
@@ -2061,7 +2061,7 @@ pages={1037--1060},
   author =	 {Federico Girosi and Gary King},
   title =	 {Cause of Death Data},
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/UOVMCPSWOL}
+  note =	 {{\url{hdl:1902.1/UOVMCPSWOL}
                   [UNF:3:9JU+SmVyHgwRhAKclQ85Cg==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2073,7 +2073,7 @@ pages={1037--1060},
                   Preprocessing for Reducing Model Dependence in
                   Parametric Causal Inference},
   year =	 2006,
-  note =	 {{\underline{hdl:1902.1/YVDZEQIYDS}
+  note =	 {{\url{hdl:1902.1/YVDZEQIYDS}
                   Murray Research Archive [distributor]}}
 }
 
@@ -2083,7 +2083,7 @@ pages={1037--1060},
   title =	 {Replication data for: A Unified Model of Cabinet
                   Dissolution in Parliamentary Democracies},
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/RMPXNUSBBS}
+  note =	 {{\url{hdl:1902.1/RMPXNUSBBS}
                   [UNF:3:lfKIeFJKgejkOzXEY1i6lw==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2093,7 +2093,7 @@ pages={1037--1060},
   title =	 {Replication Data Set for: When Can History be Our
                   Guide? The Pitfalls of Counterfactual Inference},
   year =	 2006,
-  note =	 {{\underline{hdl:1902.1/DXRXCFAWPK}
+  note =	 {{\url{hdl:1902.1/DXRXCFAWPK}
                   Murray Research Archive [distributor]}}
 }
 
@@ -2102,7 +2102,7 @@ pages={1037--1060},
   title =	 {Replication data for: Detecting Model Depedence in
                   Statistical Inference: A Response},
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/FGSRBXXIYT}
+  note =	 {{\url{hdl:1902.1/FGSRBXXIYT}
                   [UNF:3:K4/CgnMYDMV6izc5RVOZTA==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2112,7 +2112,7 @@ pages={1037--1060},
   title =	 {Replication data for: When Can History be Our Guide?
                   The Pitfalls of Counterfactual Inference},
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/DXRXCFAWPK}
+  note =	 {{\url{hdl:1902.1/DXRXCFAWPK}
                   [UNF:3:DaYlT6QSX9r0D50ye+tXpA==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2122,7 +2122,7 @@ pages={1037--1060},
   title =	 {Replication data for: The Dangers of Extreme
                   Counterfactuals },
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/UTVMBVNGMX}
+  note =	 {{\url{hdl:1902.1/UTVMBVNGMX}
                   [UNF:3:ytKKNjK+yR8Pq3H0RcV6eg==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2133,7 +2133,7 @@ pages={1037--1060},
   title =	 {Replication data for: The Supreme Court During
                   Crisis: How War Affects Only Nonwar Cases},
   year =	 {2005},
-  note =	 {{\underline{hdl:1902.1/RESUDVYWPE}
+  note =	 {{\url{hdl:1902.1/RESUDVYWPE}
                   [UNF:3:ZmbzFbfqogNM0Gb6CcV52A==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2142,7 +2142,7 @@ pages={1037--1060},
   author =	 {Nathaniel Beck and Gary King and Langche Zeng},
   title =	 {Replication data for: Gelpi and Grynaviski},
   year =	 {2004},
-  note =	 {{\underline{hdl:1902.1/LAAYCJJGDS}
+  note =	 {{\url{hdl:1902.1/LAAYCJJGDS}
                   [UNF:3:N0bEAswAlPPVXCxPOZYyqw==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2151,7 +2151,7 @@ pages={1037--1060},
   author =	 {Gary King},
   title =	 {10 Million International Dyadic Events},
   year =	 {2003},
-  note =	 {{\underline{hdl:1902.1/FYXLAWZRIA}
+  note =	 {{\url{hdl:1902.1/FYXLAWZRIA}
                   [UNF:3:um06qkr/1tAwpS4roUqAiw==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2161,7 +2161,7 @@ pages={1037--1060},
   title =	 {Replication data for: Explaining Rare Events in
                   International Relations},
   year =	 {2001},
-  note =	 {\underline{hdl:1902.1/OUCBSJKXIC}
+  note =	 {\url{hdl:1902.1/OUCBSJKXIC}
                   [UNF:3:vyct3c8fMCdWOdp03NUhaA==] Murray Research
                   Archive [Distributor]}
 }
@@ -2171,7 +2171,7 @@ pages={1037--1060},
   title =	 {Replication data for: Improving Forecats of State
                   Failure},
   year =	 {2001},
-  note =	 {{\underline{hdl:1902.1/RPQIODIANR}
+  note =	 {{\url{hdl:1902.1/RPQIODIANR}
                   [UNF:3:CEsbEgPxbxExfYuh2NWwWQ==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2181,7 +2181,7 @@ pages={1037--1060},
   title =	 {Replication data for: Improving Quantitative Studies
                   of International Conflict: A Conjecture},
   volume =	 {2000},
-  note =	 {{\underline{hdl:1902.1/SZKONDGOMF}
+  note =	 {{\url{hdl:1902.1/SZKONDGOMF}
                   [UNF:3:rYRDzT8dCJ/BR7V9u8fObA==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2191,7 +2191,7 @@ pages={1037--1060},
   title =	 {Replication data for: Making the Most of Statistical
                   Analyses: Improving Interpretation and Presentation},
   year =	 {2000},
-  note =	 {{\underline{hdl:1902.1/QTCABXZZRQ}
+  note =	 {{\url{hdl:1902.1/QTCABXZZRQ}
                   [UNF:3:1VaLflZ/LfB+AISX+hBm1w==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2201,7 +2201,7 @@ pages={1037--1060},
   title =	 {Replication data for: A Statistical Model of
                   Multiparty Electoral Data},
   year =	 {1999},
-  note =	 {{\underline{hdl:1902.1/QIGTWZYTLZ}
+  note =	 {{\url{hdl:1902.1/QIGTWZYTLZ}
                   [UNF:3:gwGcKylle0BKJTGv3Zv4OA==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2212,7 +2212,7 @@ pages={1037--1060},
                   Events that have Never Occurred: When is your Vote
                   Decisive},
   year =	 {1998},
-  note =	 {{\underline{hdl:1902.1/NOLXXTUHNZ}
+  note =	 {{\url{hdl:1902.1/NOLXXTUHNZ}
                   [UNF:3:ORDulVH6qEb4lsCyDn5W3A==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2223,7 +2223,7 @@ pages={1037--1060},
                   Inference Problem: Reconstructing Individuals
                   Behavior from Aggregate Data},
   year =	 {1997},
-  note =	 {{\underline{hdl:1902.1/LWMMKUTYXS}
+  note =	 {{\url{hdl:1902.1/LWMMKUTYXS}
                   [UNF:3:DRWozWd89+vNLO7lY2AHbg==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2233,7 +2233,7 @@ pages={1037--1060},
   title =	 {Replication data for: Enhancing Democracy Through
                   Legislative Redistricting},
   year =	 {1994},
-  note =	 {{\underline{hdl:1902.1/BNCOWNVERH}
+  note =	 {{\url{hdl:1902.1/BNCOWNVERH}
                   [UNF:3:ZXahi7PBFxLRb46sVKOAuQ==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2245,7 +2245,7 @@ pages={1037--1060},
                   States House of Representatives adn Ohio State
                   Legislature},
   year =	 {1994},
-  note =	 {{\underline{hdl:1902.1/JWFTSFKOBK}
+  note =	 {{\url{hdl:1902.1/JWFTSFKOBK}
                   [UNF:3:Fi01DWj4Sx+0ZEOEo4TOXA==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2255,7 +2255,7 @@ pages={1037--1060},
   title =	 {Elections to the United States House of
                   Representatives, 1898-1992},
   year =	 {1994},
-  note =	 {{\underline{hdl:1902.1/TQDSSPRDDZ}
+  note =	 {{\url{hdl:1902.1/TQDSSPRDDZ}
                   [UNF:3:tD8SznMFjKIxWxOqTQaamQ==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2266,7 +2266,7 @@ pages={1037--1060},
                   Election Campaign Polls so Variable When Votes are
                   so Predictable?},
   year =	 {1993},
-  note =	 {{\underline{hdl:1902.1/SBBXEUSSCW}
+  note =	 {{\url{hdl:1902.1/SBBXEUSSCW}
                   Murray Research Archive [Distributor]}}
 }
 
@@ -2275,7 +2275,7 @@ pages={1037--1060},
   title =	 {Replication data for: On Party Platforms, Mandates,
                   and Government Spending},
   year =	 {1993},
-  note =	 {{\underline{hdl:1902.1/XEHYCJAWQD}
+  note =	 {{\url{hdl:1902.1/XEHYCJAWQD}
                   [UNF:3:cwNXuRQ/6Lp72obLkttmGg==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2285,7 +2285,7 @@ pages={1037--1060},
   title =	 {Replication data for: Constituency Service and
                   Incumbency Advantage},
   year =	 {1991},
-  note =	 {{\underline{hdl:1902.1/JTMXGSZXIZ}
+  note =	 {{\url{hdl:1902.1/JTMXGSZXIZ}
                   [UNF:3:IE4ZSAs8ZzUK+fRXNbVvGw==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2294,7 +2294,7 @@ pages={1037--1060},
   author =	 {Gary King},
   title =	 {Replication data for: On Political Methodology},
   year =	 {1991},
-  note =	 {{\underline{hdl:1902.1/KHTLSQXAEJ}
+  note =	 {{\url{hdl:1902.1/KHTLSQXAEJ}
                   Murray Research Archive [Distributor]}}
 }
 
@@ -2304,7 +2304,7 @@ pages={1037--1060},
                   Delegate Selection Rules in Presidential
                   Nominations},
   year =	 {1990},
-  note =	 {{\underline{hdl:1902.1/BUJXCEPXQK}
+  note =	 {{\url{hdl:1902.1/BUJXCEPXQK}
                   [UNF:3:OdFPcQcvfO5hc3WJ5ty8vQ==] Murray Research
                   Archive [Distributor]}}
 }
@@ -2315,7 +2315,7 @@ pages={1037--1060},
                   Identification in the U.S. House of Representatives,
                   1789-1984},
   year =	 {1986},
-  note =	 {{\underline{hdl:1902.1/HINHTJQYFO}
+  note =	 {{\url{hdl:1902.1/HINHTJQYFO}
                   Murray Research Archive [Distributor]}}
 }
 
