--- a/gk.bib
+++ b/gk.bib
@@ -23683,7 +23683,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Jason Ng},
   journal =      {`Blocked on Weibo' blog},
   month =        {16 November},
-  note =         {blockedonweibo.tumblr.com},
+  note =         {\urlblockedonweibo.tumblr.com}},
   year =         {2011}
 }
 
@@ -23758,8 +23758,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {Experiencing Censorship Emboldens Internet Users and
                   Decreases Government Support in China},
   author =       {Roberts, M},
-  journal =      {Unpublished Working Paper, URL
-                  http://www.margaretroberts.net/wp-content/uploads/2015/07/fear.pdf},
+  journal =      {Unpublished Working Paper,
+                  \url{margaretroberts.net/wp-content/uploads/2015/07/fear.pdf}},
   year =         {2015}
 }
 @Article{BarLiaXu15,
@@ -23955,7 +23955,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @Misc{Pew14,
   author =       {{Pew Research Center}},
   title =        {Beyond Red vs. Blue: The Political Typology},
-  howpublished = {{http://j.mp/PewResponse}},
+  howpublished = {\url{j.mp/PewResponse}}},
   month =        {June},
   year =         2014
 }
@@ -24096,7 +24096,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   an Internet Power},
   year =         {Feb. 2014},
   note =
-                  {{http://cpc.people.com.cn/n/2014/0228/c64094-24488180.html}}
+                  {\url{cpc.people.com.cn/n/2014/0228/c64094-24488180.html}}
 }
 
 @article{Hall06,
