--- a/gk.bib
+++ b/gk.bib
@@ -24095,7 +24095,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   and Development to Strive to Build Our Country into
                   an Internet Power},
   year =         {Feb. 2014},
-  note =         {\url{cpc.people.com.cn/n/2014/0228/c64094-24488180.html}}
+  note =         {\url{j.mp/XiJingingSph}}
 }
 
 @article{Hall06,
