--- a/gk.bib
+++ b/gk.bib
@@ -24094,8 +24094,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {Overall Plan Involving all Parties for Innovation
                   and Development to Strive to Build Our Country into
                   an Internet Power},
-  year =         {Feb. 2014},
-  note =         {\url{j.mp/XiJingingSph}}
+  year =         {2014},
+  note =         {Feburary, \url{j.mp/XiJingingSph}}
 }
 
 @article{Hall06,
