--- a/gk.bib
+++ b/gk.bib
@@ -23683,7 +23683,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Jason Ng},
   journal =      {`Blocked on Weibo' blog},
   month =        {16 November},
-  note =         {\urlblockedonweibo.tumblr.com}},
+  note =         {\url{blockedonweibo.tumblr.com}},
   year =         {2011}
 }
 
