--- a/gk.bib
+++ b/gk.bib
@@ -23955,7 +23955,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @Misc{Pew14,
   author =       {{Pew Research Center}},
   title =        {Beyond Red vs. Blue: The Political Typology},
-  howpublished = {j.mp/PewResponse}},
+  howpublished = {\url{j.mp/PewResponse}},
   month =        {June},
   year =         2014
 }
