--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -98,6 +98,21 @@
 % Articles
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@Article{KinLamRob17,
+  author =       {Gary King and Patrick Lam and Margaret E. Roberts},
+  title =        {Computer-Assisted Keyword and Document Set
+  Discovery from Unstructured Text},
+  journal =      {American Journal of Political Science},
+  year =         {2017},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {Forthcoming},
+  OPTannote =    {}
+}
+
 @Article{IacKinPor15,
   author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =        {A Theory of Statistical Inference for Matching
@@ -2461,5 +2476,6 @@ pages={1037--1060},
   title =        {Replication Data for: Computer-Assisted Keyword and
                   Document Set Discovery from Unstructured Text},
   year =         2016,
-  note =      {\url{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
-                  [UNF:6:56ELwemliNH+ALideeeh3Q==]}}
+  note =         {\url{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
+                  [UNF:6:56ELwemliNH+ALideeeh3Q==]}
+}
