--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -497,7 +497,7 @@ pages={1037--1060},
   year =	 {2007},
   volume =	 {15},
   pages =	 {199--236},
-  note =	 {{http://gking.harvard.edu/files/abs/matchp-abs.shtml}}
+  note =	 {\url{http://gking.harvard.edu/files/abs/matchp-abs.shtml}}
 }
 
 @article{HopKin10b,
@@ -1389,7 +1389,7 @@ pages={1037--1060},
   pages =	 {424--427},
   month =	 {February},
   number =	 {3},
-  note =	 {{http://www.hmdc.harvard.edu/ROAD/}}
+  note =	 {\url{http://www.hmdc.harvard.edu/ROAD/}}
 }
 
 @article{BenKin96,
