--- a/gk.bib
+++ b/gk.bib
@@ -24208,3 +24208,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2016},
   publisher =    {Oxford University Press}
 }
+
+@book{Lynch99,
+  title={After the Propaganda State: Media, Politics, and ``Thought Work" in Reformed China},
+  author={Lynch, {Daniel C}},
+  year={1999},
+  publisher={Stanford University Press}
+}
