--- a/gk.bib
+++ b/gk.bib
@@ -24128,10 +24128,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @book{Brady09,
-  title={Marketing Dictatorship: Propaganda and Thought Work in Contemporary China},
-  author={Brady, Anne-Marie},
-  year={2009},
-  publisher={Rowman \& Littlefield Publishers}
+  title =        {Marketing Dictatorship: Propaganda and Thought Work
+                  in Contemporary China},
+  author =       {Brady, Anne-Marie},
+  year =         {2009},
+  publisher =    {Rowman \& Littlefield Publishers}
 }
 @Misc{Wade16,
   author =    {Wade, Samuel},
@@ -24210,8 +24211,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @book{Lynch99,
-  title={After the Propaganda State: Media, Politics, and ``Thought Work" in Reformed China},
-  author={Lynch, {Daniel C}},
-  year={1999},
-  publisher={Stanford University Press}
+  title =        {After the Propaganda State: Media, Politics, and
+                  ``Thought Work" in Reformed China},
+  author =       {Lynch, {Daniel C}},
+  year =         {1999},
+  publisher =    {Stanford University Press}
 }
