Added 3 citations for ReadMe project

--- a/gk.bib
+++ b/gk.bib
@@ -1821,6 +1821,16 @@ howpublished = {NBER}
 	address={New Haven, CT}
 }
 
+@article{BouBroDun94,
+  title={Evidence on the validity of cross-sectional and longitudinal labor market data},
+  author={Bound, John and Brown, Charles and Duncan, Greg J and Rodgers, Willard L},
+  journal={Journal of Labor Economics},
+  pages={345--368},
+  year={1994},
+  publisher={JSTOR}
+}
+
+
 @article{Brown82,
 	author={Brown, Courtney},
 	title={The Nazi Vote: A National Ecological Study},
@@ -5039,6 +5049,17 @@ howpublished = {NBER}
 	volume={66},
 	year={1998},
 	pages={315-31}
+}
+
+@article{HallPres99,
+  title={Intentionally biased bootstrap methods},
+  author={Hall, Peter and Presnell, Brett},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={61},
+  number={1},
+  pages={143--158},
+  year={1999},
+  publisher={Wiley Online Library}
 }
 
 @unpublished{Hamermesh07,
