fixed citation name length bug

--- a/gk.bib
+++ b/gk.bib
@@ -5051,7 +5051,7 @@ howpublished = {NBER}
 	pages={315-31}
 }
 
-@article{HallPres99,
+@article{HalPre99,
   title={Intentionally biased bootstrap methods},
   author={Hall, Peter and Presnell, Brett},
   journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
