--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -510,7 +510,7 @@ pages={1037--1060},
   number =	 {1},
   month =	 {January},
   pages =	 {229--247},
-  note =	 {\urlhttp://j.mp/jNFDgI}}
+  note =	 {\url{http://j.mp/jNFDgI}}
 }
 
 @article{ImaKinLau07,
