--- a/gk.bib
+++ b/gk.bib
@@ -24238,3 +24238,17 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1999},
   publisher =    {Stanford University Press}
 }
+@Article{WinWes16,
+  author =       {Christopher Winship and Bruce Western},
+  title =        {Multicollinearity and Model Misspecification},
+  journal =      {Sociological Science},
+  year =         {2016},
+  OPTkey =       {},
+  OPTvolume =    {3},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
