--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -508,7 +508,7 @@ pages={1037--1060},
   year =	 {2010},
   volume =	 {54},
   number =	 {1},
-  month =	 {January},
+  month =	 {1},
   pages =	 {229--247},
   note =	 {\url{http://j.mp/jNFDgI}}
 }
