--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -209,19 +209,15 @@
   OPTnote =      {},
   OPTannote =    {}
 }
-@Article{BlaHonKin15b,
-  author =       {Matthew Blackwell and James Honaker and Gary King},
+
+@article{BlaHonKin15b,
   title =        {A Unified Approach to Measurement Error and Missing
-                  Data: Details and Extensions},
-  journal =      {Sociological Methods and Research},
-  year =         {2015},
-  OPTkey =       {},
-  OPTvolume =    {},
-  OPTnumber =    {},
-  OPTpages =     {},
-  OPTmonth =     {},
-  OPTnote =      {},
-  OPTannote =    {}
+                  Data Overview and Applications},
+  author =       {Blackwell, Matthew and Honaker, James and King,
+                  Gary},
+  journal =      {Sociological Methods \& Research},
+  pages =        {1--39},
+  year =         {2015}
 }
 
 @Article{KinSen12,
