--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -212,7 +212,7 @@
 
 @article{BlaHonKin15b,
   title =        {A Unified Approach to Measurement Error and Missing
-                  Data Overview and Applications},
+                  Data: Overview and Applications},
   author =       {Blackwell, Matthew and Honaker, James and King,
                   Gary},
   journal =      {Sociological Methods \& Research},
