--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2475,3 +2475,11 @@ pages={1037--1060},
   note =         {\url{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
                   [UNF:6:56ELwemliNH+ALideeeh3Q==]}
 }
+@Online{HopKinKno13,
+  author =       {Daniel Hopkins, Gary King, Matthew Knowles, Steven
+                  Melendez},
+  title =        {Readme: Software for Automated Content Analysis},
+  date =         {2007-2013},
+  url =          {GaryKing.org/readme}
+}
+
