--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2476,10 +2476,11 @@ pages={1037--1060},
                   [UNF:6:56ELwemliNH+ALideeeh3Q==]}
 }
 @Online{HopKinKno13,
-  author =       {Daniel Hopkins, Gary King, Matthew Knowles, Steven
-                  Melendez},
+  author =       {Daniel Hopkins and Gary King and Matthew Knowles and
+                  Steven Melendez},
   title =        {Readme: Software for Automated Content Analysis},
-  date =         {2007-2013},
-  url =          {GaryKing.org/readme}
+  date =         {2013},
+  url =          {GaryKing.org/readme},
+  note =         {Versions 2007--2013}
 }
 
