--- a/gk.bib
+++ b/gk.bib
@@ -24252,3 +24252,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   OPTannote =    {}
 }
 
+@article{Firat16,
+  title={Unified Framework for Quantification},
+  author={Firat, Aykut},
+  journal={arXiv preprint arXiv:1606.00868},
+  year={2016}
+}
