--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2484,3 +2484,32 @@ pages={1037--1060},
   note =         {Versions 2007--2013}
 }
 
+@Patent{KinHopLu12,
+  author =       {King, Gary and Hopkins, Daniel and Lu, Ying},
+  title =        {System for estimating a distribution of message
+                  content categories in source data},
+  number =       {8,180,717},
+  ALTyear =      {2012},
+  ALTdate =      {},
+  OPTkey =       {},
+  OPTholder =    {},
+  OPTsubtitle =  {},
+  OPTtitleaddon = {},
+  OPTtype =      {},
+  OPTversion =   {},
+  OPTlocation =  {},
+  OPTnote =      {},
+  OPTdate =      {},
+  OPTmonth =     {},
+  OPTyear =      {},
+  OPTaddendum =  {},
+  OPTpubstate =  {},
+  OPTdoi =       {},
+  OPTeprint =    {},
+  OPTeprintclass = {},
+  OPTeprinttype = {},
+  OPTurl =       {},
+  OPTurldate =   {},
+  OPTannote =    {}
+}
+
