--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2489,27 +2489,6 @@ pages={1037--1060},
   title =        {System for estimating a distribution of message
                   content categories in source data},
   number =       {8,180,717},
-  ALTyear =      {2012},
-  ALTdate =      {},
-  OPTkey =       {},
-  OPTholder =    {},
-  OPTsubtitle =  {},
-  OPTtitleaddon = {},
-  OPTtype =      {},
-  OPTversion =   {},
-  OPTlocation =  {},
-  OPTnote =      {},
-  OPTdate =      {},
-  OPTmonth =     {},
-  OPTyear =      {},
-  OPTaddendum =  {},
-  OPTpubstate =  {},
-  OPTdoi =       {},
-  OPTeprint =    {},
-  OPTeprintclass = {},
-  OPTeprinttype = {},
-  OPTurl =       {},
-  OPTurldate =   {},
-  OPTannote =    {}
+  year =         2012
 }
 
