--- a/gk.bib
+++ b/gk.bib
@@ -24242,15 +24242,8 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Christopher Winship and Bruce Western},
   title =        {Multicollinearity and Model Misspecification},
   journal =      {Sociological Science},
-  year =         {2016},
-  OPTkey =       {},
-  OPTvolume =    {3},
-  OPTnumber =    {},
-  OPTpages =     {},
-  OPTmonth =     {},
-  OPTnote =      {},
-  OPTannote =    {}
-}
+  year =         2016,
+  volume =    3}
 
 @article{Firat16,
   title={Unified Framework for Quantification},
