--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2488,7 +2488,7 @@ pages={1037--1060},
   author =       {King, Gary and Hopkins, Daniel and Lu, Ying},
   title =        {System for estimating a distribution of message
                   content categories in source data},
-  number =       {8,180,717},
+  number =       {US Patent 8,180,717},
   year =         2012
 }
 
