--- a/gk.bib
+++ b/gk.bib
@@ -24251,3 +24251,48 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal={arXiv preprint arXiv:1606.00868},
   year={2016}
 }
+@article{BucGar66,
+  title =        {Comparison of a Screening Test and a Reference Test
+                  in Epidemiologic Studies. I. Indices of Agreements
+                  and their Relation to Prevalence.},
+  author =       {Buck, Alfred A and Gart, John J},
+  journal =      {American Journal of Epidemiology},
+  volume =       {83},
+  number =       {3},
+  pages =        {586--92},
+  year =         {1966}
+}
+@techreport{Forman07,
+  title =        {Quantifying counts, costs, and trends accurately via
+                  machine learning},
+  author =       {Forman, George},
+  year =         {2007},
+  institution =  {Technical report, HP Laboratories, Palo Alto, CA}
+}
+@inproceedings{MilMonRos13,
+  title =        {Quantification trees},
+  author =       {Milli, Letizia and Monreale, Anna and Rossetti,
+                  Giulio and Giannotti, Fosca and Pedreschi, Dino and
+                  Sebastiani, Fabrizio},
+  booktitle =    {2013 IEEE 13th International Conference on Data
+                  Mining},
+  pages =        {528--536},
+  year =         {2013}
+}
+@article{EsuFab15,
+  title =        {Optimizing text quantifiers for multivariate loss
+                  functions},
+  author =       {Esuli, Andrea and Sebastiani, Fabrizio},
+  journal =      {ACM Transactions on Knowledge Discovery from Data
+                  (TKDD)},
+  volume =       {9},
+  number =       {4},
+  pages =        {27},
+  year =         {2015}
+}
+@article{Tasche16,
+  title={Does quantification without adjustments work?},
+  author={Tasche, Dirk},
+  journal={arXiv preprint arXiv:1602.08780},
+  year={2016}
+}
