--- a/gk.bib
+++ b/gk.bib
@@ -24279,7 +24279,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {528--536},
   year =         {2013}
 }
-@article{EsuFab15,
+@article{EsuSeb15,
   title =        {Optimizing text quantifiers for multivariate loss
                   functions},
   author =       {Esuli, Andrea and Sebastiani, Fabrizio},
