--- a/gk.bib
+++ b/gk.bib
@@ -24297,3 +24297,17 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal={arXiv preprint arXiv:1602.08780},
   year={2016}
 }
+@article{TibBieFri12,
+  title =        {Strong rules for discarding predictors in lasso-type
+                  problems},
+  author =       {Tibshirani, Robert and Bien, Jacob and Friedman,
+                  Jerome and Hastie, Trevor and Simon, Noah and
+                  Taylor, Jonathan and Tibshirani, Ryan J},
+  journal =      {Journal of the Royal Statistical Society: Series B
+                  (Statistical Methodology)},
+  volume =       74,
+  number =       2,
+  pages =        {245--266},
+  year =         2012,
+  publisher =    {Wiley Online Library}
+}
