--- a/gk.bib
+++ b/gk.bib
@@ -24311,3 +24311,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         2012,
   publisher =    {Wiley Online Library}
 }
+@book{BarBer12,
+  title={The weighted bootstrap},
+  author={Barbe, Philippe and Bertail, Patrice},
+  volume={98},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
