--- a/gk.bib
+++ b/gk.bib
@@ -24318,3 +24318,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2012},
   publisher={Springer Science \& Business Media}
 }
+@article{KarLiNar16,
+  title =        {Online Optimization Methods for the Quantification
+                  Problem},
+  author =       {Kar, Purushottam and Li, Shuai and Narasimhan,
+                  Harikrishna and Chawla, Sanjay and Sebastiani,
+                  Fabrizio},
+  journal =      {arXiv preprint arXiv:1605.04135},
+  year =         {2016}
+}
